menu slider and advertisement page

--- a/store/src/default/pages/home-menu/home-menu.component.html
+++ b/store/src/default/pages/home-menu/home-menu.component.html
@@ -1,16 +1,15 @@
 <app-main-carousel></app-main-carousel>
 
 <div class="products-tabs featured-tabs">
-    <mat-tab-group mat-stretch-tabs *ngIf="(listSandbox?.productlist$ | async)?.length > 0">
+    <mat-tab-group mat-stretch-tabs>
         <mat-tab label="Most Popular and Trending">
-            <app-trending-product></app-trending-product>
+           <app-trending-product></app-trending-product>
         </mat-tab>
     </mat-tab-group>
 </div>
-
 <div class="products-tabs featured-tabs">
     <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Dynamic Text Area">
+        <mat-tab label="Dynamic Text Area" *ngIf="(listSandbox.bannerList$ | async)?.length > 0">
             <app-advertisment-product></app-advertisment-product>
         </mat-tab>
     </mat-tab-group>
@@ -18,7 +17,7 @@
 
 <div class="products-tabs featured-tabs">
     <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Dynamic Text Area">
+        <mat-tab label="Dynamic Text Area" *ngIf="(listSandbox.bannerList$ | async)?.length > 0">
             <app-advertisment-product></app-advertisment-product>
         </mat-tab>
     </mat-tab-group>
@@ -26,7 +25,7 @@
 
 <div class="products-tabs featured-tabs">
     <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Dynamic Text Area">
+        <mat-tab label="Dynamic Text Area" *ngIf="(listSandbox.bannerList$ | async)?.length > 0">
             <app-advertisment-product></app-advertisment-product>
         </mat-tab>
     </mat-tab-group>
@@ -34,7 +33,7 @@
 
 <div class="products-tabs featured-tabs">
     <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Dynamic Text Area">
+        <mat-tab label="Dynamic Text Area" *ngIf="(listSandbox.bannerList$ | async)?.length > 0">
             <app-advertisment-product></app-advertisment-product>
         </mat-tab>
     </mat-tab-group>
@@ -42,7 +41,7 @@
 
 <div class="products-tabs featured-tabs">
     <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Dynamic Text Area">
+        <mat-tab label="Dynamic Text Area" *ngIf="(listSandbox.bannerList$ | async)?.length > 0">
             <app-advertisment-product></app-advertisment-product>
         </mat-tab>
     </mat-tab-group>
