--- a/admin/src/theme/default/admin/adv/components/coupen/add/add.component.html
+++ b/admin/src/theme/default/admin/adv/components/coupen/add/add.component.html
@@ -1,4 +1,4 @@
-<app-banner-layout></app-banner-layout>
+<app-coupen-layout></app-coupen-layout>
 <div class="row products-section">
     <div class="col-12">
         <div class="breadcrumbs-row noborder">
