--- a/admin/src/theme/default/admin/adv/components/coupen/list/list.component.html
+++ b/admin/src/theme/default/admin/adv/components/coupen/list/list.component.html
@@ -1,16 +1,16 @@
-<app-banner-layout></app-banner-layout>
+<app-coupen-layout></app-coupen-layout>
 <div class="row products-section products-sub-section">
     <div class="col-12">
         <div class="breadcrumbs-row">
             <div class="bc-col">
                 <ul>
                     <li><a href="javascript:void(0)"> ADV </a></li>
-                    <li>Banners</li>
+                    <li>Coupen</li>
                 </ul>
             </div>
             <div class="bc-col-btn">
-                <button class="btn cms-btn" (click)="AddBanner()"><img
-                        src="assets/img/add-white-ico.png">Add Banner
+                <button class="btn cms-btn" (click)="AddCoupen()"><img
+                        src="assets/img/add-white-ico.png">Add Coupen
                 </button>
             </div>
         </div>
