--- a/store/src/default/shared/components/menu/menu.component.html
+++ b/store/src/default/shared/components/menu/menu.component.html
@@ -1,45 +1,51 @@
 <mat-toolbar class="top-navbar mat-elevation-z2" fxLayoutAlign="" color="primary">
+    <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+        <mat-icon>menu</mat-icon>
+    </button>
     <a class="logo" routerLink="/" (click)="closeSubMenus()"><img src="assets/images/logo1.png"></a>
     <!-- <a mat-button [routerLink]="['/']" routerLinkActive="horizontal-active-link" [routerLinkActiveOptions]="{exact:true}"> <img src="assets/images/home.png"> </a> -->
     <!-- <a mat-button (click)="sendUniqueId('productFilter')" [routerLink]="['/products/', 'All']" class="colorMenu"
         routerLinkActive="colorMenu" [routerLinkActiveOptions]="{exact:true}">
         AllProducts
     </a> -->
-    <a mat-button class="colorMenu" routerLinkActive="horizontal-active-link"
-        *ngFor="let category of categories;let i=index" [routerLinkActiveOptions]="{exact:true}"
-        [matMenuTriggerFor]="menu" (click)="indexData(i,category.categoryId)"
-        [routerLink]="['/shop', category.name, category.categoryId]">
-        <img class="menu-img" src="assets/images/1-a.png">
-        <span class="menu-text">{{category.name}}</span>
-        <!-- <mat-icon class="caret">arrow_drop_down</mat-icon> -->
-    </a>
-    <mat-menu #menu="matMenu" [overlapTrigger]="false" class="mega-menu category-menu app-dropdown">
-        <span>
-            <div fxLayout="row wrap" *ngIf="((index)||(index === 0))">
-                <div fxFlex="20" fxLayout="column" class="p-1" *ngFor="let subCategory of categories[index].children">
-                    <a mat-menu-item [routerLink]="['/products', subCategory.categoryId]"
-                        [routerLinkActiveOptions]="{exact:true}" (click)="linkActive()"
-                        routerLinkActive="horizontal-active-link">
-                        <b>{{subCategory.name}}</b>
-                    </a>
-                    <mat-divider></mat-divider>
-                    <div *ngIf="subCategory.children">
-                        <div *ngFor="let grandsubCategory of subCategory.children;let j=index">
-                            <a mat-menu-item [routerLink]="['/products', grandsubCategory.categoryId]"
-                                [routerLinkActiveOptions]="{exact:true}" (click)="linkActive()"
-                                routerLinkActive="horizontal-active-link">
-                                {{grandsubCategory.name}}</a>
+    <div fxShow="true" fxHide.lt-md>
+        <a mat-button class="colorMenu" routerLinkActive="horizontal-active-link"
+            *ngFor="let category of categories;let i=index" [routerLinkActiveOptions]="{exact:true}"
+            [matMenuTriggerFor]="menu" (click)="indexData(i,category.categoryId)"
+            [routerLink]="['/shop', category.name, category.categoryId]">
+            <img class="menu-img" src="assets/images/1-a.png">
+            <span class="menu-text">{{category.name}}</span>
+            <!-- <mat-icon class="caret">arrow_drop_down</mat-icon> -->
+        </a>
+        <mat-menu #menu="matMenu" [overlapTrigger]="false" class="mega-menu category-menu app-dropdown">
+            <span>
+                <div fxLayout="row wrap" *ngIf="((index)||(index === 0))">
+                    <div fxFlex="20" fxLayout="column" class="p-1"
+                        *ngFor="let subCategory of categories[index].children">
+                        <a mat-menu-item [routerLink]="['/products', subCategory.categoryId]"
+                            [routerLinkActiveOptions]="{exact:true}" (click)="linkActive()"
+                            routerLinkActive="horizontal-active-link">
+                            <b>{{subCategory.name}}</b>
+                        </a>
+                        <mat-divider></mat-divider>
+                        <div *ngIf="subCategory.children">
+                            <div *ngFor="let grandsubCategory of subCategory.children;let j=index">
+                                <a mat-menu-item [routerLink]="['/products', grandsubCategory.categoryId]"
+                                    [routerLinkActiveOptions]="{exact:true}" (click)="linkActive()"
+                                    routerLinkActive="horizontal-active-link">
+                                    {{grandsubCategory.name}}</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-        </span>
-    </mat-menu>
+            </span>
+        </mat-menu>
+    </div>
     <!-- <a mat-button routerLink="/contact" routerLinkActive="horizontal-active-link"
         [routerLinkActiveOptions]="{exact:true}">Contact</a> -->
 
-    <div class="search-algin" fxFlex fxFlexOffset.gt-sm="1" fxShow="false" fxShow.gt-sm>
+    <div class="search-algin" fxFlex fxFlexOffset.gt-sm="1" fxShow="true" fxShow.gt-sm>
         <form method="get" class="search-form" fxLayout="row">
             <mat-menu #categoriesMenu="matMenu" [overlapTrigger]="false" xPosition="before" class="categories-dropdown">
             </mat-menu>
@@ -52,7 +58,22 @@
         </form>
     </div>
 
+
     <div fxFlexOffset="10" fxLayout="row" fxLayoutAlign="center center">
         <app-spurt-cart></app-spurt-cart>
     </div>
 </mat-toolbar>
+
+
+<!-- <mat-sidenav-container fxFlexFill> -->
+<mat-sidenav #sidenav>
+    <mat-nav-list>
+        <a (click)="sidenav.toggle()" href="javascript:void(0)" mat-list-item>Close</a>
+        <div class="categories-wrapper categories-dropdown" perfectScrollbar>
+            <app-category-list [isClicked]="isClickedData" [categories]="listSandbox.categoryList$ | async"
+                (change)="onChangeCategory($event)" [categoryId]="category"></app-category-list>
+
+        </div>
+    </mat-nav-list>
+</mat-sidenav>
+<!-- </mat-sidenav-container> -->
