--- a/store/src/default/shared/components/menu/menu.component.html
+++ b/store/src/default/shared/components/menu/menu.component.html
@@ -59,7 +59,7 @@
     </div>
 
 
-    <div fxFlexOffset="10" fxLayout="row" fxLayoutAlign="center center">
+    <div class="menu-right" fxFlexOffset="10" fxLayout="row" fxLayoutAlign="center center">
         <app-spurt-cart></app-spurt-cart>
     </div>
 </mat-toolbar>
