--- a/store/src/default/shared/components/top-menu/top-menu.component.html
+++ b/store/src/default/shared/components/top-menu/top-menu.component.html
@@ -19,7 +19,7 @@
     <span fxShow="true" fxShow.gt-sm>
         <a mat-button [routerLink]="['/wishlist']">
             <mat-icon class="mat-icon-sm"><img src="../../../assets/images/heart.png" /></mat-icon>
-            <span class="blackStyle">Wishlist
+            <span fxShow="false" fxShow.gt-sm class="blackStyle">Wishlist
                 <ng-container *ngIf="commonSandbox.wishlistCount$ | async;else noWhishListCount">
                     ({{commonSandbox.wishlistCount$ | async}})
                 </ng-container>
