--- a/store/src/default/shared/components/top-menu/top-menu.component.html
+++ b/store/src/default/shared/components/top-menu/top-menu.component.html
@@ -1,8 +1,9 @@
 <div class="top-menu">
 
-    <a fxShow="true" fxHide.gt-sm="true" mat-button (click)="toogleInput()">
-        <mat-icon class="mat-icon-sm account-icon blackStyle"><img
-            src="../../../assets/images/search.png" /></mat-icon>
+    <a class="mobileSearchIcon" fxShow="true" fxHide.gt-sm="true" mat-button (click)="toogleInput()">
+        <mat-icon class="mat-icon-sm account-icon blackStyle">
+            <i class="fa fa-search"></i>
+        </mat-icon>
     </a>
    
 
