--- a/store/src/default/shared/components/menu/menu.component.html
+++ b/store/src/default/shared/components/menu/menu.component.html
@@ -9,15 +9,16 @@
         AllProducts
     </a> -->
     <div fxShow="true" fxHide.lt-md>
+        <!-- (click)="indexData(i,category.categoryId)" -->
         <a mat-button class="colorMenu" routerLinkActive="horizontal-active-link"
             *ngFor="let category of categories;let i=index" [routerLinkActiveOptions]="{exact:true}"
-            [matMenuTriggerFor]="menu" (click)="indexData(i,category.categoryId)"
-            [routerLink]="['/shop', category.name, category.categoryId]">
+            [matMenuTriggerFor]="menu"
+            [routerLink]="['/shop', category.name, category.categoryId]"  (mouseover)="indexData(i,category.categoryId)">
             <img class="menu-img" src="assets/images/1-a.png">
             <span class="menu-text">{{category.name}}</span>
             <!-- <mat-icon class="caret">arrow_drop_down</mat-icon> -->
         </a>
-        <mat-menu #menu="matMenu" [overlapTrigger]="false" class="mega-menu category-menu app-dropdown">
+        <mat-menu #menu="matMenu" [overlapTrigger]="false" class="mega-menu category-menu app-dropdown" [hasBackdrop]="false">
             <span>
                 <div fxLayout="row wrap" *ngIf="((index)||(index === 0))">
                     <div fxFlex="20" fxLayout="column" class="p-1"
